[package]
name = "yas"
version = "0.1.9"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
enigo = "0.0.14"
tract-onnx = "0.15.3"
serde_json = "1.0.68"
serde = "1.0.130"
regex = "1.5.4"
log = "0.4.14"
env_logger = "0.9.0"
edit-distance = "2.1.0"
clap = "2.33.3"
os_info = "3.0.7"
strum = "0.24"
strum_macros = "0.24"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = "1.0.7"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase", "wingdi", "winnt", "securitybaseapi", "libloaderapi"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
lto = true
panic = "abort"
strip = true
