[package]
name = "yas_scanner_starrail"
version = "0.1.14"
edition = "2021"
build = "build.rs"
description = "Honkai: Star Rail item scanner"
repository = "https://github.com/wormtql/yas"
keywords = ["HonkaiStarRail", "relic", "scanner", "ocr"]
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yas = { path = "../yas",  package="yas_scanner" }
anyhow = "1.0"
log = "0.4"

[build-dependencies]
winres = "0.1"
