[package]
name = "yas_scanner"
version = "0.1.14"
edition = "2021"
description = "Mihoyo game item scanner library"
repository = "https://github.com/wormtql/yas"
authors = ["wormtql <584130248@qq.com>", "GZTime <Time.GZ@outlook.com>", "YCR160 <3342711246@qq.com>"]
keywords = ["GenshinImpact", "HonkaiStarRail", "scanner", "ocr"]
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
image = "0.24"
enigo = "0.1"
# ref: https://github.com/sonos/tract#tract-opl-version-compatibility
tract-onnx = "0.17"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.5"
log = "0.4"
edit-distance = "2.1"
os_info = "3.0"
strum = "0.25"
strum_macros = "0.25"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = "1.0"
lazy_static = "1.4"
screenshots = "0.8"
png = "0.17"
anyhow = "1.0"
once_cell = "1.18"
indicatif-log-bridge = "0.2"
indicatif = "0.17"
console = "0.15"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "wingdi",
    "winnt",
    "securitybaseapi",
    "libloaderapi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
cocoa = "0.25"
