[package]
name = "yas_core"
version = "0.1.14"
edition = "2021"
description = "Mihoyo game item scanner library"
repository = "https://github.com/wormtql/yas"
authors = ["wormtql <584130248@qq.com>", "GZTime <Time.GZ@outlook.com>", "YCR160 <3342711246@qq.com>"]
keywords = ["GenshinImpact", "HonkaiStarRail", "scanner", "ocr"]
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
image = "0.24"
enigo = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.5"
log = "0.4"
edit-distance = "2.1"
os_info = "3.0"
strum = "0.25"
strum_macros = "0.25"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = "1.0"
lazy_static = "1.4"
screenshots = { version = "0.8", optional = true }
png = "0.17"
anyhow = "1.0"
once_cell = "1.18"
indicatif-log-bridge = "0.2"
indicatif = "0.17"
console = "0.15"
xcap = { version = "0.0.4", optional = true }
paste = "1.0"
prettytable-rs = "^0.10"
bytesize = {version = "1.2.0", features = ["serde"]}
ort = { version = "2.0.0-rc.2", optional = true }
ndarray = { version = "0.15", optional = true }
tract-onnx = { version = "0.21.5", optional = true }
libwayshot = { version = "0.3.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "wingdi",
    "winnt",
    "securitybaseapi",
    "libloaderapi",
    "shellscalingapi"
] }
windows-capture = "1.0.65"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
cocoa = "0.25"

[features]
# default = ["tract_onnx"]
ort = ["dep:ort", "dep:ndarray"]
tract_onnx = ["dep:tract-onnx"]

default = ["capturer_xcap", "capturer_screenshots"]
capturer_xcap = ["dep:xcap"]
capturer_screenshots = ["dep:screenshots"]
capturer_libwayshot = ["dep:libwayshot"]

